# cellxgene-census

./: .coveragerc  .flake8  .gitignore  .gitmodules  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  LLM_CENSUS_DEMO.ipynb  README.html  README.md  SECURITY.md  Untitled.html  articles.html  build-census.yaml  cell_census_notebook_guidelines.html  cellxgene_census_aws_open_data.html  cellxgene_census_docsite_FAQ.html  cellxgene_census_docsite_data_release_info.html  cellxgene_census_docsite_installation.html  cellxgene_census_docsite_landing.html  cellxgene_census_docsite_quick_start.html  cellxgene_census_docsite_schema.html  cellxgene_census_mirroring.html  cellxgene_census_schema.html  cellxgene_census_storage_and_release_policy.html  census_article_guidelines.html  census_notebook_guidelines.html  codecov.yml  entrypoint.py  entrypoint.sh  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  python-api.html  (+4 more)
api/python/cell_census/: README.md  REAMDE.md  pyproject.toml  release_process.md  setup.cfg
api/python/cell_census/scripts/: formatting.sh  requirements-dev.txt
api/python/cell_census/src/cell_census/: __init__.py  _experiment.py  _get_anndata.py  _open.py  _presence_matrix.py  _release_directory.py  _util.py  experiment.py  get_anndata.py  get_presence_matrix.py  open.py  presence_matrix.py  release_directory.py  util.py
api/python/cell_census/src/cell_census/compute/: __init__.py  highly_variable_genes.py  meanvar.py
api/python/cell_census/src/cell_census/experiment_query/: __init__.py  anndata.py  axis.py  query.py  types.py  util.py
api/python/cell_census/tests/: README.md  conftest.py  test_acceptance.py  test_directory.py  test_get_anndata.py  test_get_helpers.py  test_highly_variable_genes.py  test_meanvar.py  test_open.py  test_util.py
api/python/cell_census_pypi_redirect/: README.md  pyproject.toml
api/python/cellxgene_census/: LICENSE  README.md  pyproject.toml  release_process.md
api/python/cellxgene_census/scripts/: requirements-dev.txt
api/python/cellxgene_census/scripts/geneformer/: Dockerfile  README.md  finetune-geneformer.config.yml  finetune-geneformer.py  generate-geneformer-embeddings.py  prepare-census-geneformer-dataset.py
api/python/cellxgene_census/scripts/geneformer/helpers/: ontology_mapper.py
api/python/cellxgene_census/scripts/geneformer/wdl/: finetune_geneformer.wdl  generate_embeddings.wdl  prepare_datasets.wdl
api/python/cellxgene_census/src/cellxgene_census/: __init__.py  _experiment.py  _get_anndata.py  _open.py  _presence_matrix.py  _release_directory.py  _util.py  py.typed
api/python/cellxgene_census/tests/: README.md  conftest.py  test_acceptance.py  test_aws.py  test_ci.py  test_directory.py  test_get_anndata.py  test_get_helpers.py  test_lts_compat.py  test_open.py  test_user_agent.py  test_util.py
api/python/cellxgene_census/tests/experimental/: test_embeddings.py  test_embeddings_search.py  test_pytorch.py
api/python/cellxgene_census/tests/incubation/: test_pytorch.py
tools/cell_census_builder/: Dockerfile  Makefile  README.md  __main__.py  anndata.py  census_summary.py  consolidate.py  datasets.py  entrypoint.sh  experiment_builder.py  globals.py  manifest.py  mp.py  pyproject.toml  source_assets.py  summary_cell_counts.py  tissue_mapper.py  util.py  validate.py
tools/cell_census_builder/scripts/aws/: mount_instance_storage.sh  swapon_instance_storage.sh
tools/cell_census_builder/scripts/release/: census_summary.py
tools/cell_census_builder/src/cell_census_builder/: __init__.py  __main__.py  build_state.py  census_summary.py  host_validation.py  logging.py  release_cleanup.py  release_gc.py  release_manifest.py  util.py
tools/cell_census_builder/src/cell_census_builder/build_soma/: __main__.py  build.py  build_soma.py  consolidate.py  experiment_specs.py  manifest.py  mp.py  source_assets.py  util.py  validate.py  validate_soma.py
tools/cell_census_builder/tests/: conftest.py  test_builder.py  test_builder_2.py  test_main.py  test_manifest.py  test_release_cleanup.py  test_release_gc.py  test_release_manifest.py  test_source_assets.py  test_util.py  test_validate.py
tools/cell_census_builder/tests/anndata/: conftest.py  test_anndata.py
tools/cellxgene_census_builder/: Dockerfile  Makefile  README.md  SPATIAL-README.md  dataset_blocklist.txt  entrypoint.sh  pyproject.toml
tools/cellxgene_census_builder/manifests/: all_spatial_manifest.csv  slideseq_manifest.csv  visium_manifest.csv  visium_manifest_s3.csv
tools/cellxgene_census_builder/spatial_dev_tools/: census_spatial_dataset_ingest.ipynb  spatial_dataset_ingest.ipynb  tiledbsoma_spatial_dataset_ingest.ipynb
tools/cellxgene_census_builder/src/cellxgene_census_builder/: __init__.py  __main__.py  build_state.py  census_summary.py  data_copy.py  host_validation.py  logging.py  process_init.py  release_cleanup.py  release_manifest.py  util.py
tools/cellxgene_census_builder/src/cellxgene_census_builder/build_soma/: __init__.py  __main__.py  anndata.py  build_soma.py  census_summary.py  consolidate.py  datasets.py  experiment_builder.py  experiment_specs.py  globals.py  manifest.py  mp.py  schema_util.py  source_assets.py  stats.py  summary_cell_counts.py  tissue_mapper.py  util.py  validate_soma.py
tools/cellxgene_census_builder/tests/: conftest.py  test_axis_stats.py  test_builder.py  test_data_copy.py  test_main.py  test_manifest.py  test_numeric.py  test_release_cleanup.py  test_release_manifest.py  test_schema_util.py  test_source_assets.py  test_spatial.py  test_tissue_mapper.py  test_util.py  test_workflow_steps.py
tools/cellxgene_census_builder/tests/anndata/: conftest.py  test_anndata.py
tools/census_contrib/: README.md  embedding_metadata.md  pyproject.toml
tools/census_contrib/scripts/: README.md  build_all_contrib.sh  get_all_metadata.py  inject_all.sh
tools/census_contrib/src/census_contrib/: __main__.py  args.py  census_util.py  config.py  embedding.py  inmem_demos.ipynb  load.py  metadata.py  save.py  util.py  validate.py
(+853 files in other folders)
