[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cell_census_builder"
dynamic = ["version"]
description = "Build Cell Census"
authors = [
    { name = "Chan Zuckerberg Initiative", email = "cellxgene@chanzuckerberg.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">= 3.9, < 3.11"  # Python 3.11 is pending numba support
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies= [
    "typing_extensions",
    "pyarrow",
    "pandas",
    "anndata>=0.8",
    "numpy",
    "cell_census==0.10.0",
    "scipy",
    "fsspec",
    "s3fs",
    "requests",
    "aiohttp",
    "Cython", # required by owlready2
    "wheel",  # required by owlready2
    "owlready2",
    "gitpython",
    "attrs>=22.2.0",
    "psutil",
]

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["cell_census_builder*"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["tests*", "scripts*"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools_scm]
root = "../.."

[tool.black]
line-length = 120
target_version = ['py39']

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unreachable = true
strict = true
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501", "E402", "C408", ]
line-length = 120
target-version = "py39"
