[build-system]
# TODO: I've updated the build system so I can install the local version of cellxgene_census using hatch's context formatting._format_
# This is a little half-assed, and should be either reverted or improved as we approach a release.
# Right now the wheels/ sdists being produces may include a different set of files since there are no include/ exclude configuration values set
# https://hatch.pypa.io/dev/config/context/ 
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
# requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
# build-backend = "setuptools.build_meta"

[project]
name = "cellxgene-census-builder"
dynamic = ["version"]
description = "Build Cell Census"
authors = [
    { name = "Chan Zuckerberg Initiative Foundation", email = "soma@chanzuckerberg.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "~= 3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
]
dependencies= [
    "typing_extensions==4.10.0",
    "pyarrow==15.0.2",
    "pandas[performance]==2.2.1",
    "anndata @ git+https://github.com/scverse/anndata",
    "numpy==1.26.4",
    # IMPORTANT: consider TileDB format compat before advancing this version. It is important that
    # the tiledbsoma _format_ version lag that used in cellxgene-census package, ensuring that
    # recent cellxgene-census _readers_ are able to read the results of a Census build (writer).
    # The compatibility matrix is defined here:
    #    https://github.com/TileDB-Inc/TileDB/blob/dev/format_spec/FORMAT_SPEC.md
    # TODO (spatial): tiledbsoma pin to a PyPI release is temporarily commented out in favor git commit pin
    # "tiledbsoma==1.9.3",
    # TODO (spatial): Pin tiledbsoma dependency to an actual released version after tiledbsoma spatial code has been released
    "tiledbsoma @ git+https://github.com/single-cell-data/TileDB-SOMA.git@a1f255c7591d7e9e82ed56e712d5a8899f6d46bf#egg=tiledbsoma&subdirectory=apis/python/",
    # TODO (spatial): Deal with the following line before release
    "cellxgene-census @ {root:parent:parent:uri}/api/python/cellxgene_census",
    "cellxgene-ontology-guide==1.2.0",
    "scipy==1.12.0",
    "fsspec[http]==2024.3.1",
    "s3fs==2024.3.1",
    "requests==2.32.0",
    "aiohttp==3.10.2",
    "Cython", # required by owlready2
    "wheel",  # required by owlready2
    "owlready2==0.44",
    "gitpython==3.1.42",
    "attrs==23.2.0",
    "psutil==5.9.8",
    "pyyaml==6.0.1",
    "numba==0.59.1",
    "dask==2024.3.1",
    "distributed==2024.3.1",
    "tiledb",
]

[project.urls]
homepage = "https://github.com/chanzuckerberg/cellxgene-census"
repository = "https://github.com/chanzuckerberg/cellxgene-census"

[tool.hatch.metadata]
allow-direct-references = true  # This allows us to pin dependencies to specific commits during development, e.g. tiledbsoma @ git+...

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }

[tool.setuptools.packages.find]
where = ["src"]
include = ["cellxgene_census_builder*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools_scm]
root = "../.."

[tool.black]
line-length = 120
target_version = ['py311']

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unreachable = true
strict = true
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501", "E402", "C408", ]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "live_corpus: runs on the live Census data corpus and small enough to run in CI",
    "expensive: too expensive to run regularly or in CI",
]
