[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cellxgene-census-builder"
dynamic = ["version"]
description = "Build Cell Census"
authors = [
    { name = "Chan Zuckerberg Initiative Foundation", email = "soma@chanzuckerberg.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "~= 3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
]
dependencies= [
    "typing_extensions==4.12.2",
    "pyarrow==19.0.1",
    "pandas[performance]>=2.2.3",
    "anndata==0.11.3",
    "numpy==1.26.4",
    # IMPORTANT: consider TileDB format compat before advancing this version. It is important that
    # the tiledbsoma _format_ version lag that used in cellxgene-census package, ensuring that
    # recent cellxgene-census _readers_ are able to read the results of a Census build (writer).
    # The compatibility matrix is defined here:
    #    https://github.com/TileDB-Inc/TileDB/blob/dev/format_spec/FORMAT_SPEC.md
    "tiledbsoma==1.15.3",
    "cellxgene-census==1.16.2",
    "cellxgene_ontology_guide==1.4.2",
    "scipy>=1.15.2",
    "fsspec[http]==2025.2.0",
    "s3fs==2025.2.0",
    "requests==2.32.3",
    "aiohttp==3.11.13",
    "gitpython==3.1.44",
    "attrs>=25.1.0",
    "psutil==7.0.0",
    "pyyaml>=6.0.2",
    "numba==0.61.0",
    "dask==2024.11.2",
    "distributed==2024.11.2",
    "tiledb==0.33.4",
    # Spatial testing
    "filelock==3.17.0",
    "spatialdata==0.4.0", # spatialdata & xarray pinned due to dep conflicts introduced around 8/14/2025
    "xarray==2025.7.1",
    "pooch==1.8.2",
    "pytest-xdist==3.6.1",
]

[project.urls]
homepage = "https://github.com/chanzuckerberg/cellxgene-census"
repository = "https://github.com/chanzuckerberg/cellxgene-census"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cellxgene_census_builder*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools_scm]
root = "../.."

[tool.black]
line-length = 120
target_version = ['py311']

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unreachable = true
strict = true
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501", "E402", "C408", ]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "live_corpus: runs on the live Census data corpus and small enough to run in CI",
    "expensive: too expensive to run regularly or in CI",
]
