[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cell_census"
dynamic = ["version"]
description = "API to simplify use of the CZI Science CELLxGENE Cell Census"
authors = [
    { name = "Chan Zuckerberg Initiative", email = "cellxgene@chanzuckerberg.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">= 3.7, < 3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies= [
    "numba>=0.55",
    "numpy>=1.21",
    "requests",
    # NOTE: The API's version of tiledbsoma MUST be >= the builder's tiledbsoma version, to ensure reader compatibility
    # of TileDB on-disk storage format. Make sure this doesn't fall behind the builder's tiledbsoma version.
    # NOTE: tiledb is also a requirement of the API, but tiledbsoma also has a tiledb dependency, so just use 
    # the same version here
    "tiledbsoma==0.5.0a10",
    "typing_extensions",
    "s3fs",
    "scikit-misc",
]

[project.urls]
homepage = "https://github.com/chanzuckerberg/cell-census"
repository = "https://github.com/chanzuckerberg/cell-census"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cell_census*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools_scm]
root = "../../.."

[tool.black]
line-length = 120
target_version = ['py39']

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unreachable = true
strict = true
plugins = "numpy.typing.mypy_plugin"

[tool.pytest.ini_options]
markers = [
    "live_corpus: runs on the live Cell Census data corpus",
]

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501", "E402", "C408", ]
line-length = 120
target-version = "py39"

[tool.ruff.isort]
known-first-party =["cell_census"]
