[metadata]
name = cell_census
version = attr: cell_census.__version__
author = Chan Zuckerberg Initiative
author_email = cellxgene@chanzuckerberg.com
description = API to simplify use of the CZI Science CELLxGENE Cell Census
long_description = file: README.md LICENSE
license = MIT
url = https://github.com/chanzuckerberg/cell-census

[options]
python_requires = >= 3.8
install_requires =
    numba
    numpy
    requests
    tiledb
    tiledbsoma
    typing_extensions
    s3fs
    scikit-misc
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
