[metadata]
name = cell_census
version = attr: cell_census.__version__
author = Chan Zuckerberg Initiative
author_email = cellxgene@chanzuckerberg.com
description = API to simplify use of the CZI Science CELLxGENE Cell Census
long_description = file: README.md LICENSE
license = MIT
url = https://github.com/chanzuckerberg/cell-census
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.7, < 3.11
install_requires =
    numba
    numpy
    requests
    tiledb>=0.18.1
    tiledbsoma>=0.5.*
    typing_extensions
    s3fs
    scikit-misc
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
